# Healthcare-MCP

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
examples/: README.md  hmcp_llm_demo.py  hmcp_server_helper_demo.py  requirements.txt
examples/emr_patient_data_example/: README.md  client-http-streamable.py  hmcp_client_standalone_connection.py  run_standalone_emr_server.py  run_standalone_patient_data_server.py  run_standalone_server.py
examples/multi_agent_demo/: agent.py  hmcp_agent_demo.py  multi_agent_handoff.md  multi_agent_handoff.py  multi_handoff_agent_demo.py
src/hmcp/: README.md
src/hmcp/client/: client_connector.py  hmcp_client.py
src/hmcp/server/: hmcp_server.py
src/hmcp/shared/auth/: __init__.py  exceptions.py  oauth_client.py  oauth_client_README.md
tests/hmcp/client/: test_hmcp_client.py
tests/hmcp/server/: test_hmcp_server.py
