[project]
name = "hmcp"
version = "0.0.4"
description = "Healthcare MCP"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Innovaccer" }]
dependencies = [
    "asyncio>=3.4.3",
    "mcp-use>=1.2.7",
    "mcp[cli]==1.26.0",
    "nest-asyncio>=1.6.0",
    "uvicorn==0.34.3",
    "starlette==0.49.1",
    "cryptography>=41.0.0",
    "aiohttp>=3.8.0",
    "PyJWT>=2.8.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black==25.1.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hmcp"]
